--- a/package.json
+++ b/package.json
@@ -4,23 +4,10 @@
   "description": "Gamify Your Token",
   "main": "server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.35",
-    "@solana/wallet-adapter-react-ui": "^0.9.34",
-    "@solana/wallet-adapter-wallets": "^0.19.25",
-    "@solana/web3.js": "^1.90.0",
     "express": "^4.18.2",
-    "framer-motion": "^11.0.3",
-    "lucide-react": "^0.323.0",
-    "next": "^14.1.0",
-    "node-fetch": "^2.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "swr": "^2.2.4"
+    "node-fetch": "^2.7.0"
   }
 }
